[package]
edition = "2021"
name = "wego-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
async-recursion = "1.0.4"
base64-compat = "1.0.0"
colored = "2"
dialoguer = "0.10.3"
futures = "0.3"
hyper = {version = "0.14", features = ["full"]}
hyper-rustls = "0.24.1"
lazy_static = "1.4.0"
napi = {version = "2.12.2", default-features = false, features = ["napi4", "async"]}
napi-derive = "2.12.2"
rustls = "0.21.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
